--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pure-loaders": "^3.0.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "universal-cookie": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
